# candy-game

./: Cargo.toml  README.md  docs.md
src/: api.rs  lib.rs  main.rs  map.rs  world.rs  world_controller.rs
src/client/: create.rs  join.rs  list.rs  mod.rs
src/game/: api.rs  map.rs  mazes.rs  mod.rs  world.rs  world_controller.rs
vhs/: demo.tape
