[package]
name = "world_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
termion = "2.0.1"
tokio = { version = "1.33.0", features = ["full"] }
