[package]
name = "world_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.11.0"
env_logger = "0.10.0"
log = "0.4.20"
prettytable-rs = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
termion = "2.0.1"
tokio = { version = "1.33.0", features = ["full"] }

[lib]
name = "candy_game"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"
